More work on the caching database